@@ -1,4 +1,6 @@
 docker stop candyss && docker rm $_
 docker rmi $(docker images -q rollrat/candyss)
 docker pull rollrat/candyss:latest
-docker run -d -v /home/ec2-user/config-java:/config/ --name candyss --network host rollrat/candyss:latest
+docker run -d -v /home/ec2-user/config-java:/config/ --env \
+  JAVA_OPTS="-Xloggc:gc.log -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -XX:+PrintGCTimeStamps -XX:+PrintGcDateStamps" \
+  --name candyss --network host rollrat/candyss:latest
